--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
 </head>
 <body>
+<div th:replace="~{fragments/alert}"></div>
+
 <div class="navbar">
     <div class="brand">SpringCloud</div>
     <div class="username-box">
@@ -36,9 +38,6 @@
             <label for="confirmPassword">Neues Passwort wiederholen</label>
             <input type="password" id="confirmPassword" name="confirmPassword" required>
         </div>
-
-        <div th:if="${error}" class="error-message" th:text="${error}"></div>
-        <div th:if="${success}" class="success-message" th:text="${success}"></div>
 
         <button type="submit">Passwort ändern</button>
     </form>
