--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
 </head>
 <body>
+<div th:replace="~{fragments/alert}"></div>
 <div class="navbar">
     <div class="brand">SpringCloud</div>
     <div class="username-box">
