--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
+<div th:replace="~{fragments/alert}"></div>
 <div class="container">
     <form class="login-form" th:action="@{/login}" method="post">
         <h2>SpringCloud</h2>
