--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -64,8 +64,22 @@
     transition: background-color 0.3s ease;
 }
 
+.logout-dropdown a.admin-element {
+    color: #fff;
+    text-decoration: none;
+    padding: 12px 15px;
+    background-color: #f44336;
+    display: block;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
 .logout-dropdown a:hover {
     background-color: #b259ff; /* Hover-Farbe für Links */
+}
+
+.logout-dropdown a.admin-element:hover {
+    background-color: #d32f2f; /* Hover-Farbe für Links */
 }
 
 .username-box:hover .logout-dropdown,
