--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,9 +14,10 @@
     <div class="username-box">
         <span th:text="${username}">Username</span>
         <div class="logout-dropdown" id="logoutDropdown">
-            <a th:if="${role == 'ROLE_ADMIN'}" th:href="@{/admin}">Admin</a>
-            <a th:href="@{/change-password}">Change Password</a>
+            <a th:if="${role == 'ROLE_ADMIN'}" th:href="@{/admin}" class="admin-element">Admin</a>
             <a th:href="@{/dashboard}">Dashboard</a>
+            <a th:href="@{/calendar}">Calendar</a>
+            <a th:href="@{/change-password}">Change Password</a>
             <a th:href="@{/logout}">Logout</a>
         </div>
     </div>
