--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -1,3 +1,9 @@
+:root {
+    --btn-color: #8a34db;
+    --btn-color-hover: #7f29b9;
+    --btn-shadow: 0 3px 8px rgba(152, 52, 219, 0.5);
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -7,8 +13,8 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(to bottom right, #4b0082, #1a1a2e);
-    color: #fff;
+    background-color: #1f1f2e;
+    color: #e4e4e4;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -17,7 +23,10 @@ body {
 
 .content {
     flex: 1;
-    padding: 30px;
+    padding: 40px;
+    max-width: 1700px;
+    margin: 0 auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,13 +37,14 @@ h1 {
     font-weight: 300;
     text-align: center;
     margin-bottom: 30px;
+    color: #ffffff;
 }
 
 .upload-btn {
     position: fixed;
     bottom: 30px;
     right: 30px;
-    background-color: #b259ff;
+    background-color: var(--btn-color);
     color: white;
     border: none;
     width: 70px;
@@ -50,7 +60,7 @@ h1 {
 }
 
 .upload-btn:hover {
-    background-color: #9d4ae2;
+    background-color: var(--btn-color-hover);
     transform: scale(1.1);
 }
 
@@ -136,7 +146,7 @@ h1 {
 .file-list li {
     padding: 15px;
     margin: 10px 0;
-    background-color: #2d2d2d;
+    background-color: #28283a;
     border-radius: 8px;
     display: flex;
     justify-content: space-between;
@@ -146,7 +156,7 @@ h1 {
 }
 
 .file-list li:hover {
-    background-color: #333;
+    background-color: #34344e;
     border-left: 5px solid #b259ff;
 }
 
@@ -170,23 +180,25 @@ h1 {
 .actions a {
     padding: 8px 16px;
     border-radius: 8px;
-    background-color: #4caf50;
+    background-color: var(--btn-color);
     color: white;
     text-decoration: none;
+    box-shadow: var(--btn-shadow);
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .actions a:hover {
-    background-color: #45a049;
+    background-color: var(--btn-color-hover);
     transform: scale(1.05);
 }
 
 .actions .delete {
-    background-color: #f44336;
+    background-color: #ac3931;
+    box-shadow: 0 3px 8px rgba(245, 25, 25, 0.5);
 }
 
 .actions .delete:hover {
-    background-color: #da190b;
+    background-color: #9b241b;
 }
 
 #previewPopup {
@@ -373,7 +385,7 @@ h1 {
     padding: 40px;
     border-radius: 12px;
     text-align: center;
-    width: ;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
