--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -32,21 +32,22 @@
     <h2>Passwort ändern</h2>
 
     <form th:action="@{/change-password}" method="post">
-        <div class="form-group">
+        <div class="input-group">
+            <input type="password" id="currentPassword" name="currentPassword" required placeholder=" ">
             <label for="currentPassword">Aktuelles Passwort</label>
-            <input type="password" id="currentPassword" name="currentPassword" required>
         </div>
-        <div class="form-group">
+        <div class="input-group">
+            <input type="password" id="newPassword" name="newPassword" required minlength="8" placeholder=" ">
             <label for="newPassword">Neues Passwort</label>
-            <input type="password" id="newPassword" name="newPassword" required minlength="8">
         </div>
-        <div class="form-group">
+        <div class="input-group">
+            <input type="password" id="confirmPassword" name="confirmPassword" required placeholder=" ">
             <label for="confirmPassword">Neues Passwort wiederholen</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
         </div>
 
         <button type="submit">Passwort ändern</button>
     </form>
+
 
 </div>
 </body>
