--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,7 +19,7 @@
         </svg>
         <span th:text="${username}">N/A</span>
         <div class="logout-dropdown" id="logoutDropdown">
-            <a th:if="${role == 'ROLE_ADMIN'}" th:href="@{/admin}" class="admin-element">Admin</a>
+            <a th:if="${role != null and #strings.endsWith(role, 'ADMIN')}" th:href="@{/admin}" class="admin-element">Admin</a>
             <a th:href="@{/dashboard}">Dashboard</a>
             <a th:href="@{/calendar}">Calendar</a>
             <a th:href="@{/change-password}">Change Password</a>
